<resources>
    <string name="app_name">HappDeporteAndroid</string>
    <string name="list_of_teams">List of Teams</string>
    <string name="Add">Add</string>
    <string name="list_of_users">List of Coaches</string>
    <string name="list_of_matches">List of Matches</string>
    <string name="view_map">View Maps</string>
    <string name="preferences">Preferences</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="register_match">Register Match</string>
    <string name="category">Category:</string>
    <string name="competition">Competition:</string>
    <string name="cuota">Cuota:</string>
    <string name="day_training">Day Training:</string>
    <string name="start_training">Start Training:</string>
    <string name="end_training">End Training:</string>
    <string name="active">Active:</string>
    <string name="coach">Coach:</string>
    <string name="id">Id:</string>
    <string name="name">name:</string>
    <string name="surname">surname</string>
    <string name="address">Address</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="addTeamToCoach">Register Team this Coach</string>
    <string name="opponent_team">Opponent team:</string>
    <string name="team">Team:</string>
    <string name="local_marker">Local Marker:</string>
    <string name="opponent_marker">Opponent Marker:</string>
    <string name="analysis">Analysis:</string>
    <string name="day">Day:</string>
    <string name="hour">Hour:</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="local_team">Local Team:</string>
    <string name="select_location_message">Selecction location in the map</string>
    <string name="add_result_markerA">Add result to local Team</string>
    <string name="add_result_markerB">Add result to opposite Team</string>
    <string name="add_date">Add date with format YYYY-MM-DD</string>
    <string name="add_hour">Add hour with format HH:MM</string>
    <string name="coach_id">Coach:</string>
    <string name="modify">Modify</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="remove_team">Remove Team</string>
    <string name="yes">Yes</string>
    <string name="no">Not</string>
    <string name="remove_user">Remove User</string>
    <string name="username">Username:</string>
    <string name="pass">Pass:</string>
    <string name="rol">Rol:</string>
    <string name="coach_id_modify">Coach Id:</string>
    <string name="modify_coach">For to modify team, you need the id of Coach</string>
    <string name="title_modify">Search the id users for the team</string>
    <string name="accept">Accept</string>
    <string name="delete_to_favorite">Delete to Favorite</string>
</resources>