<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUserId"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/id" />

            <TextView
                android:id="@+id/tv_user_modify_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/et_user_modify_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPass"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/pass" />

            <EditText
                android:id="@+id/et_user_modify_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRol"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/rol" />

            <CheckBox
                android:id="@+id/user_modify_coach_boolean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCoach"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/coach" />

            <EditText
                android:id="@+id/et_user_modify_coach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/user_modify_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSurname"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/et_user_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/et_user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMail"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/mail" />

            <EditText
                android:id="@+id/et_user_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/et_user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/modify_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:onClick="modifyUser"
            android:padding="5dp"
            android:text="@string/modify"
            android:textColor="#F4D504"
            android:textSize="12sp"
            app:icon="?android:attr/actionModeFindDrawable"
            app:iconTint="#F4D504" />

        <Button
            android:id="@+id/modify_user_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:onClick="modifyUserCancel"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="#F4D504"
            android:textSize="12sp"
            app:icon="@drawable/ic_baseline_cancel_presentation_24"
            app:iconPadding="12dp"
            app:iconTint="#F4D504" />

    </LinearLayout>



</LinearLayout>