<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSurname"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/surname" />

            <TextView
                android:id="@+id/user_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMail"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/mail" />

            <TextView
                android:id="@+id/user_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:textSize="12sp"
            app:iconSize="30dp"
            android:id="@+id/modify_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:padding="5dp"
            android:text="@string/modify"
            android:textColor="#F4D504"
            app:iconTint="#F4D504"
            app:icon="?android:attr/actionModeFindDrawable" />

        <Button
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:textSize="12sp"
            app:iconSize="30dp"
            android:id="@+id/delete_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:padding="5dp"
            android:text="@string/delete"
            android:textColor="#F4D504"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconPadding="12dp"
            app:iconTint="#F4D504" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:textSize="12sp"
            app:iconSize="30dp"
            android:id="@+id/team_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:padding="5dp"
            android:text="@string/addTeamToCoach"
            android:textColor="#F4D504"
            app:iconTint="#F4D504"
            app:icon="@drawable/ic_baseline_sports_baseball_24" />

    </LinearLayout>

</LinearLayout>