<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.MatchRegisterView">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_userInTeam"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/coach_id" />

        <TextView
            android:id="@+id/tv_userIdInTeam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/category" />

        <EditText
            android:id="@+id/et_team_addCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"  />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/tv_competition"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/competition" />

        <EditText
            android:id="@+id/et_team_addCompetition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/tv_dayTrain"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text= "@string/day_training" />

        <EditText
            android:id="@+id/et_team_addDayTrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/tv_startTrain"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/start_training" />

        <EditText
            android:id="@+id/et_team_addStartTrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/tv_endTrain"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/end_training" />

        <EditText
            android:id="@+id/et_team_addEndTrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/tv_active"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/active" />

        <CheckBox
            android:id="@+id/cb_team_addActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/add_team_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:onClick="saveButtonTeam"
            android:text="@string/save"
            app:icon="@drawable/ic_baseline_data_saver_on_24" />

        <Button
            android:id="@+id/back_match_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#020200"
            android:onClick="goBackButton"
            android:text="@string/cancel"
            app:icon="@drawable/ic_baseline_cancel_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
